templates/keycloak-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #cert-manager.io/issuer: "selfsigned"
    #nginx.org/ssl-passthrough: "true"
    #nginx.org/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #      proxy_set_header Sec-Fetch-Site "cross-site";
    #      proxy_cookie_flags ~ secure httponly samesite=none;
     #     more_clear_headers "X-Frame-Options" "Sec-* ";
spec:
  #tls:
  #  - hosts:
  #    - "keycloak.192.168.49.2.nip.io"
  #    secretName: tls-secret
  rules:
    - host: keycloak.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
